--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Calculator</string>
+    <string name="btnAdd">Add</string>
+    <string name="numberHint">Please enter a number</string>
 </resources>
