--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Calculator</string>
     <string name="btnAdd">Add</string>
     <string name="numberHint">Please enter a number</string>
+    <string name="btnLogs">Show Logs</string>
+    <string name="btnSubtract">Subtract</string>
 </resources>
