--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="numberHint">Please enter a number</string>
     <string name="btnLogs">Show Logs</string>
     <string name="btnSubtract">Subtract</string>
+    <string name="btnDivide">Divide</string>
+    <string name="btnMultiply">Multiply</string>
 </resources>
